Made Some heading update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Hello</p>
     <div class="main">
         <div class="left">
             <div class="coral"></div>
